make sure that the selector for the visibility always fits next to 'Profile picture'

--- a/settings/css/settings.css
+++ b/settings/css/settings.css
@@ -28,7 +28,7 @@ input#openid, input#webdav { width:20em; }
 }
 
 #avatarform {
-	width: 145px;
+	min-width: 145px;
 	padding-right: 0;
 }
 #avatarform .avatardiv {
